2004-10-08  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : Performance fix. ParseExact() implementation should
	  avoid s = s.Substring(1).

2004-10-08  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : When it it not exact parse, 'Z' is allowed as a suffix
	  of m/s/t/z. This fixes bug 66723.

Wed Oct 6 12:37:54 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* String.cs: make GetHashCode() managed.

2004-10-04  Zoltan Varga  <vargaz@freemail.hu>

	* AppDomain.cs: Make ThreadStatic variables static. Fixes #56614.

	* Runtime*Handle.cs ModuleHandle.cs: Add Equals + GetHashCode.

	* ModuleHandle.cs: Add missing methods.

	* RuntimeTypeHandle.cs: Add GetModuleHandle () method.

2004-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* AttributeTargets.cs: Add 2.0 GenericParameter value.

	* Environment.cs: Bump corlib version.

2004-10-02  Zoltan Varga  <vargaz@freemail.hu>

	* Int32.cs UInt32.cs Byte.cs SByte.cs Int16.cs UInt16.cs Int64.cs UInt64.cs: Implement 2.0 TryParse methods.

2004-09-30  Geoff Norton  <gnorton@customerdna.com>

	* Convert.cs: ConvertToBase* was not endian aware.  Implemented EndianSwap
	and swapping of all values before going into the BitConverter so that values
	are returned with proper endianess.

2004-09-23  Martin Garton  <martin@wrasse.demon.co.uk>

	* Convert.cs: ToType was returning unconverted object when it should
	fail with an ArgumentException.

2004-09-27  Zoltan Varga  <vargaz@freemail.hu>

	* Array.cs: Add stub for AsReadOnly<T>.
	
2004-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* Type.cs: Add MakePointerType && stub for ReflectionOnlyGetType.

	* MonoCustomAttrs.cs (GetCustomAttributesBase): Add support for
	parameters.

2004-09-24  Zoltan Varga  <vargaz@freemail.hu>

	* MonoCustomAttrs.cs (GetCustomAttributesBase): Add support for
	methods and fields.
	
	* MonoCustomAttrs.cs: Beginnings of support for returning 2.0 pseudo
	custom attributes.

	* MonoCustomAttrs.cs (RetrieveAttributeUsage): Avoid infinite recursion.
